add favicon, fix style

--- a/css/screen.css
+++ b/css/screen.css
@@ -72,7 +72,7 @@ body, html {
 
 .contact-link-block {
     font-size: 20px;
-    height: 300px;
+    height: 450px;
 }
 .contact-link-block p {
     font-size: 14px;
@@ -84,15 +84,25 @@ body, html {
 }
 .contact-link-block .avatar-container {
     width: 100%;
-    margin: 50px auto 0 auto;
+    margin: 0 auto;
 }
 .avatar-container img {
     display: block;
     height: 150px;
     margin: 0 auto;
 }
+.contact-link-block .first-blank-row {
+    height: 50px;
+}
+.contact-link-block .second-blank-row {
+    height: 150px;
+}
 @media screen and (max-width: 768px) {
     .contact-link-block {
+        min-height: 100px;
         height: auto;
+    }
+    .contact-link-block .second-blank-row {
+        height: 10px;
     }
 }
